[gd_scene load_steps=6 format=3 uid="uid://dj23jsxt3olcy"]

[ext_resource type="Script" uid="uid://br8tbc5kabwn8" path="res://scenes/ui.gd" id="1_nt7q6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4jx1"]
bg_color = Color(0.96102864, 0.8323885, 0.74762285, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlq6p"]
bg_color = Color(0.6765713, 0.42137825, 0.2907781, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt7q6"]
bg_color = Color(0.20650001, 0.47494993, 0.59, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yev5y"]
bg_color = Color(0.9607843, 0.83137256, 0.7490196, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt7q6")

[node name="RiverStatus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Panel" type="Panel" parent="RiverStatus"]
layout_mode = 0
offset_left = -220.0
offset_top = -26.0
offset_right = -2.0
offset_bottom = 9.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x4jx1")

[node name="ProgressBar" type="ProgressBar" parent="RiverStatus"]
layout_mode = 0
offset_left = -214.0
offset_top = -22.0
offset_right = -7.0
offset_bottom = 5.0
theme_override_styles/background = SubResource("StyleBoxFlat_xlq6p")
theme_override_styles/fill = SubResource("StyleBoxFlat_nt7q6")
show_percentage = false

[node name="Label" type="Label" parent="RiverStatus"]
layout_mode = 0
offset_left = -154.0
offset_top = -49.0
offset_right = -61.0
offset_bottom = -26.0
text = "River Status"

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GameOver/VBoxContainer"]
layout_mode = 2
text = "Game Over"

[node name="RetryButton" type="Button" parent="GameOver/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Try Again"

[node name="TrashCounter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="TrashCounter"]
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 107.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yev5y")

[node name="Label" type="Label" parent="TrashCounter/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -10.0
offset_right = 15.5
offset_bottom = 37.66667
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0
"
horizontal_alignment = 1

[node name="EpiSelect" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="EpiSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -23.0
offset_right = 150.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EpiSelect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EpiSelect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "EPI"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="EpiSelect/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GloveButton" type="Button" parent="EpiSelect/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Luvas"

[node name="ProtectionButton" type="Button" parent="EpiSelect/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Macac√£o"

[node name="BootButton" type="Button" parent="EpiSelect/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Botas"

[connection signal="pressed" from="GameOver/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="EpiSelect/Panel/VBoxContainer/HBoxContainer/GloveButton" to="." method="_on_glove_button_pressed"]
[connection signal="pressed" from="EpiSelect/Panel/VBoxContainer/HBoxContainer/ProtectionButton" to="." method="_on_protection_button_pressed"]
[connection signal="pressed" from="EpiSelect/Panel/VBoxContainer/HBoxContainer/BootButton" to="." method="_on_boot_button_pressed"]
